test/samples/invalid/tc/fun_call_rets2.maruir
fun add(a: uint8, b: uint8): uint8
locals res: uint8;
{
    entry:
        res := a + b;
        return res;
}


fun main()
locals a: uint8, b: int16, c: int32;
{
    entry:
    call add(uint8(1), uint8(2));
    return;
}